--- a/src/main/webapp/relatorio.xhtml
+++ b/src/main/webapp/relatorio.xhtml
@@ -82,6 +82,7 @@
 <!--            <p:dataTable id="tabela_inspecao" var="avaliacao" value="#{relatorioC.inspecaoSelecionada.avaliacoes}" >
                              
                 <h2>#{relatorioC.inspecaoSelecionada.empreendimento.nome}</h2>
+                <p><b>Rua: </b> #{relatorioC.inspecaoSelecionada.empreendimento.logradouro}</p>
                 <p><b>Data da vistoria:</b> #{relatorioC.inspecaoSelecionada.dataEhora}</p>
                 <p><b>Observação:</b> #{relatorioC.inspecaoSelecionada.observacao}</p>
 
