--- a/src/main/webapp/relatorio.xhtml
+++ b/src/main/webapp/relatorio.xhtml
@@ -60,7 +60,7 @@
                        
                         <h:commandLink
                             actionListener="#{relatorioC.setInspecaoSelecionada(inspecao)}"
-                            action="inspecao.html" target="_blank">Visualização/Impressão
+                            action="inspecao.html" target="_blank">Visualizar/Imprimir
                         </h:commandLink>
                         
                     </p:column>                       
