lapidando tela inspeção novo- para adaptação responsividade tela

--- a/src/main/webapp/novo.xhtml
+++ b/src/main/webapp/novo.xhtml
@@ -23,7 +23,9 @@
                             <p:selectOneMenu id="lugar" value="#{inspecaoC.empreendimento.id}" 
                                              required="true" requiredMessage="Nome empreendimento é obrigatório! Se não houver Nome empreendimento ir no menu Cadastro -> Empreendimento."
                                              filter="true" filterMatchMode="startsWith">
-                                <f:selectItem itemLabel="Selecione o empreendimento (se não houver empreendimento ir em Cadastro -> Empreendimento):"/>
+                                <f:selectItem 
+                                    itemLabel="Selecione (se não houver:Cadastro->Empreendimento):">
+                                </f:selectItem>
                                 <f:selectItems value="#{inspecaoC.comboEmpreendimentos}"/>
                             </p:selectOneMenu>
                             
