mexendo tela item-seleção

--- a/src/main/webapp/item.xhtml
+++ b/src/main/webapp/item.xhtml
@@ -29,7 +29,7 @@
                             <p:selectOneMenu id="categoria" value="#{itemC.categoria.id}" 
                                              required="true" requiredMessage="Categoria é obrigatório!"
                                              filter="true" filterMatchMode="startsWith">
-                                <f:selectItem itemLabel="Selecione:"/>
+                                <f:selectItem itemLabel="Selecione a categoria:"/>
                                 <f:selectItems value="#{itemC.comboCategoria}"/>
                             </p:selectOneMenu>
                             <p:outputLabel for="nome" value="Descrição:" />
