--- a/src/main/webapp/novo.xhtml
+++ b/src/main/webapp/novo.xhtml
@@ -84,7 +84,7 @@
                         </p:repeat>
                         -->
                     
-                        <p:commandButton value="Salvar Inspeção" action="#{inspecaoC.salvar()}"  update="@all" >                           
+                        <p:commandButton value="Salvar" action="#{inspecaoC.salvar()}"  update="@all" >                           
                             <p:confirm header="Confirmação" message="Deseja realmente salvar a inspeção? Essa inspeção não poderá ser alterada." icon="pi pi-info-circle"/>
                         </p:commandButton>
                         
