--- a/src/main/webapp/inicio.xhtml
+++ b/src/main/webapp/inicio.xhtml
@@ -18,6 +18,21 @@
         <br/>
         <br/>
 
+        <p:panel id="painel_conteudo4" header="Dicas">
+            <h:form>
+                <div class="card">
+                    Para fazer uma Inspeção é obrigatório cadastrar um Empreendimento.
+                </div>
+                <br/>
+                <div class="card">
+                    Caso queira cadastrar mais um Item na Inspeção é necessário: 1) selecionar ou cadastrar uma Categoria no menu de Cadastro; e 2) cadastrar um Item no menu de Cadastro.
+                </div>
+            </h:form>
+        </p:panel>
+
+        <br/>
+        <br/>
+
         <p:panel id="agrupamento">
             <br/>
             <p:panel id="painel_conteudo2" header="Total de inspeções realizadas: #{relatorioC.numeroInspecoes}">
@@ -67,6 +82,7 @@
                 </h:form>
             </p:panel>
             <br/>
+
         </p:panel>
 
     </ui:define>
