lapidando tela de início-2

--- a/src/main/webapp/inicio.xhtml
+++ b/src/main/webapp/inicio.xhtml
@@ -25,7 +25,11 @@
                 </div>
                 <br/>
                 <div class="card">
-                    Caso queira cadastrar mais um Item na Inspeção é necessário: 1) selecionar ou cadastrar uma Categoria no menu de Cadastro; e 2) cadastrar um Item no menu de Cadastro.
+                    Caso queira cadastrar mais um Item na Inspeção é necessário: 1) cadastrar uma Categoria no menu de Cadastro; e 2) cadastrar um Item no menu de Cadastro e selecionar a Categoria cadastrada.
+                </div>
+                <br/>
+                <div class="card">
+                    Caso queira cadastrar mais um Item na Inspeção com uma Categoria já existente é necessário: 1) cadastrar um Item no menu de Cadastro e selecionar a Categoria já existente. 
                 </div>
             </h:form>
         </p:panel>
