lapidando tela de início-2

--- a/src/main/webapp/inicio.xhtml
+++ b/src/main/webapp/inicio.xhtml
@@ -21,7 +21,7 @@
         <p:panel id="painel_conteudo4" header="Dicas">
             <h:form>
                 <div class="card">
-                    Para fazer uma Inspeção é obrigatório cadastrar um Empreendimento.
+                    Para fazer uma Inspeção é obrigatório ter um Empreendimento cadastrado.
                 </div>
                 <br/>
                 <div class="card">
