--- a/src/main/webapp/categoria.xhtml
+++ b/src/main/webapp/categoria.xhtml
@@ -66,7 +66,7 @@
                                 <h:outputText value="Categorias"/>
                             </f:facet>
                             <p:column headerText="Nome">
-                                <h:outputText value="#{categoria.nome}" />
+                                <h:outputText value="#{categoria.nome}" style="text-align: center"/>
                             </p:column>
   
 <!--                            <p:column headerText="Ação">
