--- a/src/main/webapp/item.xhtml
+++ b/src/main/webapp/item.xhtml
@@ -78,7 +78,7 @@
                                 <h:outputText value="#{item.nome}" />
                             </p:column>
                             <p:column headerText="Categoria">
-                                <h:outputText value="#{item.categoria.nome}" />
+                                <h:outputText value="#{item.categoria.nome}" style="text-align: center" />
                             </p:column>
 
 <!--                            <p:column headerText="Ação">
