--- a/src/main/webapp/novo.xhtml
+++ b/src/main/webapp/novo.xhtml
@@ -10,10 +10,10 @@
         <!--<h1 class="aw-page-title">Título da sua página</h1>-->
 
         <p:panel id="painel_conteudo" header="Inspeção" >
-            <p:tabView id="tab_view" activeIndex="#{inspecaoC.aba}">
+<!--            <p:tabView id="tab_view" activeIndex="#{inspecaoC.aba}">-->
 
                 <!--aba para cadastrar e alterar-->
-                <p:tab title="Novo">
+<!--                <p:tab title="Novo">-->
                     <h:form id="form_novo">
                         <p:panelGrid columns="4" layout="flex"
                                      columnClasses="p-col-12 p-md-3 p-xl-2, p-col-12 p-md-9 p-xl-10"
@@ -93,9 +93,9 @@
                             <p:commandButton value="Sim" type="button" styleClass="ui-confirmdialog-yes" />
                         </p:confirmDialog>
                     </h:form>
-                </p:tab>
+<!--                </p:tab>
 
-            </p:tabView>
+            </p:tabView>-->
 
 
         </p:panel> 
