arrumando hora de salvamento na tela de relatório

--- a/src/main/webapp/novo.xhtml
+++ b/src/main/webapp/novo.xhtml
@@ -37,7 +37,7 @@
                                             <div class="product-name">#{avaliacao.item.nome}
                                                 <div class="product-avaliacao">
                                                     <p:selectOneRadio id="console" value="#{avaliacao.resposta}" unselectable="true" 
-                                                        required="true" requiredMessage="Preenchimento do item de inspeção obrigatório (Sim, Não ou N/A)" >
+                                                        required="false" requiredMessage="Preenchimento do item de inspeção obrigatório (Sim, Não ou N/A)" >
                                                         
                                                         <!--testando o if- ainda não deu certo-->
 <!--                                                        <c:if test = "${'#{avaliacao.item.id}' == '1'}" >
