--- a/src/main/webapp/inicio.xhtml
+++ b/src/main/webapp/inicio.xhtml
@@ -62,7 +62,7 @@
                             </p:column>
                             <p:column headerText="Data de Inspeção" style="text-align: center">
                                 <h:outputText value="#{inspecao.dataEhora}">
-                                    <f:convertDateTime pattern="dd/MM/yyyy 'às' HH:mm:ss" />
+                                    <f:convertDateTime pattern="dd/MM/yyyy 'às' HH:mm:ss" timeZone="GMT-3"/>
                                 </h:outputText>
                             </p:column>
 
