--- a/src/main/webapp/inspecao.xhtml
+++ b/src/main/webapp/inspecao.xhtml
@@ -39,7 +39,7 @@
 
                 <p><b>Data da vistoria: </b> 
                     <h:outputText value="#{relatorioC.inspecaoSelecionada.dataEhora}">
-                        <f:convertDateTime pattern="dd/MM/yyyy 'às' HH:mm" />
+                        <f:convertDateTime pattern="dd/MM/yyyy 'às' HH:mm" timeZone="GMT-3" />
                     </h:outputText>
                 </p>
 
