--- a/src/main/webapp/inicio.xhtml
+++ b/src/main/webapp/inicio.xhtml
@@ -25,6 +25,10 @@
                 </div>
                 <br/>
                 <div class="card">
+                    Já há Categorias (ex: circulação, rampa) e itens relacionados a essa (ex: Circulação. Item 1: circulação com 1.50m) previamente cadastrados para já iniciar uma Inspeção. 
+                </div>
+                <br/>
+                <div class="card">
                     Caso queira cadastrar mais um Item na Inspeção é necessário: 1) cadastrar uma Categoria no menu de Cadastro; e 2) cadastrar um Item no menu de Cadastro e selecionar a Categoria cadastrada.
                 </div>
                 <br/>
@@ -38,7 +42,7 @@
         <br/>
 
         <p:panel id="agrupamento">
-            
+
             <p:panel id="painel_conteudo2" header="Total de inspeções realizadas: #{relatorioC.numeroInspecoes}">
             </p:panel>
 
