--- a/src/main/webapp/inicio.xhtml
+++ b/src/main/webapp/inicio.xhtml
@@ -34,7 +34,7 @@
                             <br/>
                         </div>
                         <div class="container_image">
-                            <h:graphicImage class="img_banner" library="senac" name="images/predio.png"  style="text-align: center; width: 30%; display: inline" />
+                            <h:graphicImage class="img_banner" library="senac" name="images/predio.png"  style="text-align: center; width: 23%; display: inline" />
                         </div>
                     </div>
                 </div>
@@ -44,12 +44,12 @@
                         <div>
                             <h2>Adicione quantos itens quiser</h2>
                             <p>
-                                Com poucos cliques você adiciona a quantidade de itens necessárias para a inspeção!
+                                Com poucos cliques você adiciona a quantidade de itens necessários para a inspeção!
                             </p>
                         </div>
                         <br/>
                         <div class="container_image">
-                            <h:graphicImage class="img_banner" library="senac" name="images/checklist.PNG" style="text-align: center; width: 23%; display: inline"/>
+                            <h:graphicImage class="img_banner" library="senac" name="images/checklist.PNG" style="text-align: center; width: 18%; display: inline"/>
                         </div>
 
                     </div>
@@ -64,7 +64,7 @@
                             </p>
                         </div>
                         <div class="container_image">
-                            <h:graphicImage class="img_banner" library="senac" name="images/logo_gmail_2.png" style="text-align: center; width: 25%; display: inline"  />
+                            <h:graphicImage class="img_banner" library="senac" name="images/logo_gmail_2.png" style="text-align: center; width: 20%; display: inline"  />
                         </div>
 
                     </div>
