--- a/src/main/webapp/inspecao.xhtml
+++ b/src/main/webapp/inspecao.xhtml
@@ -29,6 +29,8 @@
                 <h2>#{relatorioC.inspecaoSelecionada.empreendimento.nome}</h2>
                 
                 <p><b>Responsável técnico:</b> #{relatorioC.inspecaoSelecionada.responsavelTecnico}</p>
+                
+                <p><b>Função:</b> #{relatorioC.inspecaoSelecionada.empreendimento.funcao}</p>
 
                 <p><b>Cidade:</b> #{relatorioC.inspecaoSelecionada.empreendimento.localidade}
 
