--- a/src/main/webapp/novo.xhtml
+++ b/src/main/webapp/novo.xhtml
@@ -31,7 +31,7 @@
 
                     <p:outputLabel for="responsavel" value="Responsável técnico:" />
                     <p:inputText id="responsavel" value="#{inspecaoC.inspecao.responsavelTecnico}"
-                                 required="true" requiredMessage="Nome é obrigatório!" />
+                                 required="true" requiredMessage="Responsável técnico é obrigatório!" />
 
                     <p:accordionPanel value="#{inspecaoC.listaAvaliacoesPorCategoria.keySet()}" var="nomeCategoria">
                         <p:tab title="#{nomeCategoria}">
